--- a/AdatMegjelenitoKezdemeny/index.html
+++ b/AdatMegjelenitoKezdemeny/index.html
@@ -13,6 +13,14 @@
   <body>
     <h1 class="text-center">Állatkereskedés</h1>
     <div class="container">
+      <div class="row">
+        <div class="form-floating mb-3 col-4">
+          <input type="text" class="form-control" id="search" placeholder="Keresés">
+          <label for="floatingInput">Keresés</label>
+        </div>
+    </div>
+  </div>
+    <div id="adatok" class="container">
 
     </div>
 
